tutorials/dev_ws/log/build_2022-02-10_14-40-13/python_parameters/stderr.log
  File "/home/youri/dev_ws/install/python_parameters/lib/python3.8/site-packages/python_parameters/python_parameters_node.py", line 36
    main()ti
          ^
SyntaxError: invalid syntax

